set welcome better

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,8 +63,13 @@ body{
   overflow-x: hidden;
 }
 
+
+body {
+ background-color:#eee;
+}
+
 section{
-  margin:100px 0;
+  margin:100px 0 50px 0;
 }
 
 hr{
@@ -85,9 +90,7 @@ section h2{
 section h2:after{
 	margin-top:20px;
   display:inline-block;
-  content:'';
-  width:45px;
-  height:10px;
+
   border-top:5px solid #B5C3D5;
   position:absolute;
   bottom:-10px;
@@ -110,127 +113,49 @@ header{
 
 }
 
-.banner{
-  background-image:url('http://ww3.sinaimg.cn/large/006tNbRwgy1feu6egw3osj31hc0wvh1c.jpg');
-  height:480px;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-}
-
-.banner>h2,
-.banner .info{
-  height:50px;
-  line-height:50px;
-  position:relative;
-  top:115px;
-  margin:0 auto;
-  text-align:center;
-  width:50%;
-}
-
-.banner>h2{
-  font-size:2.5em;
-  color:#ffffff;
-}
-
-.banner .info{
-  display:none;
-}
-
-.banner a{
-	height:50px;
-  font-size:1.3em;
-  display:inline-block;
-  width:48%;
-  text-decoration:none;
-  border:2px solid rgba(0,0,0,.3);
-  margin-right:-4px;
-  transition:all .3s ease-in-out;
-}
-
-.banner a:last-child{
- 	margin-left:2%;
-}
-
-.banner a:hover{
-  background:#8FC6FF;
-}
-
 
 
 /*------------------------------------------------------------------
-                        SECTION.PROCESS STYLES
+                        section process
 -------------------------------------------------------------------*/
-.process{
-  background: #ffffff;
-}
-.process .method{
-  background:#ffffff;
-  text-align:center;
-  padding:10px;
-  margin-bottom:30px;
-  border-radius:5px;
-  opacity:0;
-}
 
-.process .method h3{
-  font-style:italic;
-}
 
-.process .method p{
-  margin:0;
-}
 
-.process .method h4{
-  background:#8FC6FF;
-  width:60px;
-  height:60px;
-  font-size:2em;
-  font-weight:bold;
-  border-radius:50%;
-  line-height:60px;
-  margin:0 auto;
-  position:relative;
-  top:30px;
-}
-
-/*------------------------------------------------------------------
-                        SECTION.BLOGS STYLES
--------------------------------------------------------------------*/
-.blogs{
-  margin-bottom:0;
-}
-
-.blogs p{
+#pinBoot {
   position: relative;
-  opacity: 0;
-  left:-750px;
+  max-width: 100%;
+  width: 100%;
+}
+img {
+  width: 100%;
+  max-width: 300px;
+  height: 200px;
+}
+.white-panel {
+  position: absolute;
+  background: white;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+}
+/*
+stylize any heading tags withing white-panel below
+*/
+
+.white-panel h1 {
+  font-size: 1em;
+}
+.white-panel h1 a {
+  color: #A92733;
+}
+.white-panel:hover {
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+  margin-top: -5px;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.blogs button{
-	position:relative;
-  bottom:-50px;
-  opacity:0;
-  margin-bottom:20px;
-}
-
-.col-lg-4{
-  position: relative;
-}
-
-.blogs img{
-	position:absolute;
-  right:-330px;
-	margin-top:10px;
-  opacity:0;
-}
-
-.firstAnimation {
-  opacity: 1;
-  height: 180px;
-  width: 250px;
-}
 
 /*------------------------------------------------------------------
                         FOOTER STYLES
@@ -244,64 +169,7 @@ header{
   z-index: 1000;
 }
 
-/*------------------------------------------------------------------
-                        MEDIA QUERIES STYLES
--------------------------------------------------------------------*/
-@media only screen and (max-width: 1050px) and (min-width:600px){
-  .banner>h2, .banner .info{
-    width:70%
-  }
-  .banner>h2{
-    font-size:1.8em;
-  }
-}
 
-@media only screen and (max-width: 599px) and (min-width:350px){
-  .banner a{
-    font-size:1em;
-  }
-  .banner>h2, .banner .info{
-    width:80%
-  }
-  .banner>h2{
-    font-size:1.2em;
-  }
-}
-
-@media only screen and (max-width: 349px){
-	.banner .info{
-		height:auto;
-  }
-  .banner a{
-    font-size:1em;
-    width:50%;
-    display:block;
-  }
-  .banner a:first-child{
-    margin:0 auto;
-  }
-  .banner a:last-child{
-    margin:10px auto 0;
-  }
-	.banner>h2, .banner .info{
-    width:80%
-  }
-  .banner>h2{
-    font-size:1em;
-  }
-}
-
-@media only screen and (max-width: 768px) and (min-width:550px){
-  .process .row:first-child .col-xs-12,
-  .clients .row:first-child .col-xs-12{
-      width:100%;
- 	}
-  .process .col-xs-12,
-  .clients .col-xs-12{
-    	width:50%;
-  }
-
-}
 
 
 /****** LOGIN MODAL ******/
@@ -417,3 +285,67 @@ header{
     width: 250px; //加上width
 }
 /*----------------------------end ------------------------*/
+
+
+/* -------------------------底图---------------------------*/
+.parallax-section {
+	background-attachment: fixed!important;
+}
+.btn-capsul {
+	border-radius: 30px;
+}
+
+.btn-transparent-white {
+	border: 2px solid #fff;
+	color: #fff;
+}
+.btn-transparent-white:hover, .btn-transparent-white:focus {
+	background: #fff;
+	color: #0297FF
+}
+.relative-box {
+	position: relative
+}
+section {
+	float: left;
+	width: 100%;
+	padding: 80px 0;
+}
+
+
+
+
+/* base SECTION
+-------------------------------------------------- */
+.base-sec {
+	background: url('http://ww3.sinaimg.cn/large/006tNbRwgy1fev6acoih7j31hc0xqwu3.jpg') no-repeat center center;
+	background-size: cover;
+	color: #fff;
+	position: relative;
+  margin: 0;
+
+}
+.base-sec:before {
+	content: ' ';
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: rgba(22,122,192,0.5);
+	top: 0;
+	left: 0
+}
+.base-sec h2 {
+	font-size: 55px;
+	font-weight: 800;
+	margin-top: 25%;
+}
+.base-sec h2 small {
+	display: block;
+  color: #fff;
+	font-size: 24px;
+	margin-bottom: 15px;
+	padding-left: 10px;
+}
+.base-sec p {
+	font-size: 16px;
+}
