--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -30,7 +30,7 @@
                    <div class="slide-text slide_style_left">
                        <h1 data-animation="animated zoomInRight">Bootstrap Carousel</h1>
                        <p data-animation="animated fadeInLeft">Bootstrap carousel now touch enable slide.</p>
-                       <a href="http://bootstrapthemes.co/" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">select one</a>
+                       <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">select one</a>
                    </div>
                </div>
            </div>
@@ -47,7 +47,7 @@
            <div class="slide-text slide_style_center">
                <h1 data-animation="animated flipInX">不辜负美食</h1>
                <p data-animation="animated lightSpeedIn">美食</p>
-               <a href="http://bootstrapthemes.co/" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">select one</a>
+               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">select one</a>
 
            </div>
        </div>
@@ -63,7 +63,7 @@
            <div class="slide-text slide_style_right">
                <h1 data-animation="animated zoomInLeft">Beautiful Animations</h1>
                <p data-animation="animated fadeInRight">Lots of css3 Animations to make slide beautiful .</p>
-               <a href="http://bootstrapthemes.co/" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">learn more</a>
+               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">learn more</a>
            </div>
        </div>
        <!-- End of Slide -->
@@ -86,9 +86,7 @@
  </div>
 </div>
 <!-- End  bootstrap-touch-slider Slider -->
-
-
-
+<!---首页动图演示结束-->
 
 
 
@@ -127,51 +125,36 @@
 </section> <!-- end of about section-->
 <hr>
 
-<!-- pro -->
+<!-- 中间四个图片演示 -->
+<hr>
+<section class="prectice" id="prectice">
+  <div class="container">
+    <div class="row">
+      <h2 class="text-left">We need you to grasp one of the following four</h2>
+      <section id="pinBoot">
+        <article class="white-panel"><img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulqkey26j31hc0zwduk.jpg" alt="">
+          <h4><a href="#">cookie</a></h4>
+        </article>
 
-<section class="process" id="process">
- <div class="container">
-   <div class="row">
-     <div class="col-xs-12">
-       <h2>Our Process</h2>
-     </div>
-   </div>
-   <div class="row">
-     <div class="col-xs-12 col-sm-6 col-md-3">
-       <div class="method">
-         <h3>Analyze</h3>
-         <hr>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-        <h4>酒类</h4>
-       </div>
-     </div>
-     <div class="col-xs-12 col-sm-6 col-md-3">
-       <div class="method">
-         <h3>Develop</h3>
-         <hr>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-         <h4>2</h4>
-       </div>
-     </div>
-     <div class="col-xs-12 col-sm-6 col-md-3">
-       <div class="method">
-         <h3>Test</h3>
-         <hr>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-         <h4>3</h4>
-       </div>
-     </div>
-     <div class="col-xs-12 col-sm-6 col-md-3">
-       <div class="method">
-         <h3>Deploy</h3>
-         <hr>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-         <h4>4</h4>
-       </div>
-     </div>
-   </div>
- </div>
-</section> <!-- end of method section-->
+        <article class="white-panel"> <img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulri3bd3j30hs0cnwf9.jpg" alt="">
+          <h4><a href="#">wine</a></h4>
+        </article>
+
+        <article class="white-panel"> <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1feultqyqzij31hc0zlamn.jpg" alt="">
+          <h4><a href="#">tea art</a></h4>
+        </article>
+
+
+        <article class="white-panel"> <img src="http://ww2.sinaimg.cn/large/006tNbRwgy1feultizmybj31hc0zkn9w.jpg" alt="">
+          <h4><a href="#">beafstack</a></h4>
+        </article>
+      </section>
+      <hr>
+    </div>
+  </div>
+</section>
+<!-- 中间四个图片演示结束-->
+
 <hr>
 <section class="testimonials" id="testimonials">
   <div class="container">
@@ -202,24 +185,27 @@
     </div>
   </div>
 </section><!-- end of testimonials section-->
-<hr>
-<section class="blogs" id="blogs">
+
+<!-- About
+    ================================================== -->
+<div class="row">
+<section class="base-sec parallax-section" id="base">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
-       <h2>Latest Blogs</h2>
+      <div class="col-md-3">
+        <h2><small>Who We Are</small>About
+          Us</h2>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-lg-8">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar scelerisque aliquet. Aliquam eu ultrices nisl. Mauris sit amet odio tincidunt, congue magna a, malesuada odio. Maecenas egestas metus leo, nec vulputate odio pulvinar sodales. Aenean a nunc nisi. Donec eleifend sodales mauris, ut egestas tellus ultrices nec. Integer in nisl vitae libero lobortis egestas. Proin nisi lacus, iaculis sit amet nibh vel, fringilla pellentesque est.</p>
-        <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut delectus ratione aut est, minus eius, dolorem blanditiis culpa ad iusto, accusamus iure alias nihil voluptatem soluta esse velit laudantium eum.</p>
-        <p class="visible-lg">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
-        <button type="button" class="btn btn-primary">Learn more</button>
+      <div class="col-md-4">
+        <p>To enjoy good health, to bring true happiness to one's family, to bring peace to all, one must first discipline and control one's own mind. If a man can control his mind he can find the way to Enlightenment, and all wisdom and virtue will naturally come to him.</p>
+        <p>Saving our planet, lifting people out of poverty, advancing economic growth... these are one and the same fight. We must connect the dots between climate change, water scarcity, energy shortages, global health, food security and women's empowerment. Solutions to one problem must be solutions for all.</p>
       </div>
-      <div class="visible-lg col-lg-4">
-        <img class="img-responsive" src="http://placehold.it/450x300" />
+      <div class="col-md-4">
+        <p>Our greatest happiness does not depend on the condition of life in which chance has placed us, but is always the result of a good conscience, good health, occupation, and freedom in all just pursuits.</p>
+        <p>Being in control of your life and having realistic expectations about your day-to-day challenges are the keys to stress management, which is perhaps the most important ingredient to living a happy, healthy and rewarding life.</p>
+        <p><a href="/jobs" class="btn btn-transparent-white btn-capsul">Join Us</a></p>
       </div>
     </div>
   </div>
-</section><!-- end of blogs section-->
+</section>
+</div>
