--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,25 +2,19 @@
 	<div class="navbar" role="navigation">
 		<div class="container">
     	<div class="navbar-header">
-      	<a class="navbar-brand" href="/">Gourmets</a>
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynav">
-        	<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+      	<a class="navbar-brand" href="/">GOURMETS</a>
       </div>
 
 
 
 
 
-      <div class="collapse navbar-collapse" id="mynav">
+      <div class="collapse navbar-collapse" >
         <ul class="nav navbar-nav navbar-right">
           <li>
               <% if !current_user %>
-                <li><a href="#" data-toggle="modal" data-target="#signup-modal">注册</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#login-modal">登入</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#signup-modal">Sign up</a></li>
+                <li><a href="#" data-toggle="modal" data-target="#login-modal">Log in</a></li>
               <% else %>
               <li class="dropdown">
                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -29,28 +23,23 @@
                    </a>
                <ul class="dropdown-menu">
                  <% if current_user.admin? %>
-                 <li> <%= link_to("管理员入口", admin_jobs_path)%></li>
+                 <li> <%= link_to("admin", admin_jobs_path)%></li>
                  <% end %>
-                 <li> <%= link_to("我投递的工作", account_jobs_path)%></li>
-                 <li> <%= link_to("登出", destroy_user_session_path, method: :delete) %> </li>
+                 <li> <%= link_to("My jobs", account_jobs_path)%></li>
+                 <li> <%= link_to("log out", destroy_user_session_path, method: :delete) %> </li>
               </ul>
              </li>
             <% end %>
           </li>
         </ul>
-      	<ul class="nav navbar-nav navbar-left">
-        	<li><a href="#about">About</a></li>
-          <li><a href="#clients">Clients</a></li>
-          <li><a href="#process">Process</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#blogs">Blogs</a></li>
-        </ul>
+
       </div>
      </div>
 	</div>
  </header>
 
-<!-- 以下代码添加在最后 -->
+
+<!-- 登录页面 -->
 <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
   <div class="modal-dialog" role="document">
     <div class="loginmodal-container">
