--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,5 +1,6 @@
 
-<div class="footer">
-<p class="text-center">Copyright ©2017 job-listing-game
-    <br>Design by jonathan
-</p>
+  <footer class="footer">
+    <p class="text-center">Copyright ©2017 job-listing-game
+     <br>Design by jonathan
+    </p>
+  </footer>
