--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,12 +79,17 @@ hr{
 h3,h4{
   text-align:center;
   font-weight:bold;
+  color: rgba(216,0,1,1);
+  margin-bottom:30px;
 }
-
+p{
+  font-weight: 10px;
+}
 section h2{
-  text-align:left;
+  text-align:center;
   position:relative;
-  margin-bottom:40px;
+  margin-bottom:10px;
+  color: rgba(216,0,1,1);
 }
 
 section h2:after{
@@ -128,7 +133,7 @@ header{
 }
 img {
   width: 100%;
-  max-width: 300px;
+  max-width: 350px;
   height: 200px;
 }
 .white-panel {
@@ -166,106 +171,11 @@ stylize any heading tags withing white-panel below
   background-color:#673AB7;
   color: #bdc3c7;
   padding: 20px;
+
+
   z-index: 1000;
 }
 
-
-
-
-/****** LOGIN MODAL ******/
-.loginmodal-container {
-  padding: 30px;
-  max-width: 350px;
-  width: 100% !important;
-  background-color: #F7F7F7;
-  margin: 0 auto;
-  border-radius: 2px;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
-  font-family: roboto;
-}
-
-.loginmodal-container h1 {
-  text-align: center;
-  font-size: 1.8em;
-  font-family: roboto;
-}
-
-.loginmodal-container input[type=submit] {
-  width: 100%;
-  display: block;
-  margin-bottom: 10px;
-  position: relative;
-}
-
-.loginmodal-container input[type=text], input[type=password] {
-  height: 44px;
-  font-size: 16px;
-  width: 100%;
-  margin-bottom: 10px;
-  -webkit-appearance: none;
-  background: #fff;
-  border: 1px solid #d9d9d9;
-  border-top: 1px solid #c0c0c0;
-  /* border-radius: 2px; */
-  padding: 0 8px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-}
-
-.loginmodal-container input[type=text]:hover, input[type=password]:hover {
-  border: 1px solid #b9b9b9;
-  border-top: 1px solid #a0a0a0;
-  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
-}
-
-.loginmodal {
-  text-align: center;
-  font-size: 14px;
-  font-family: 'Arial', sans-serif;
-  font-weight: 700;
-  height: 36px;
-  padding: 0 8px;
-/* border-radius: 3px; */
-/* -webkit-user-select: none;
-  user-select: none; */
-}
-
-.loginmodal-submit {
-  /* border: 1px solid #3079ed; */
-  border: 0px;
-  color: #fff;
-  text-shadow: 0 1px rgba(0,0,0,0.1);
-  background-color: #4d90fe;
-  padding: 17px 0px;
-  font-family: roboto;
-  font-size: 14px;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
-}
-
-.loginmodal-submit:hover {
-  /* border: 1px solid #2f5bb7; */
-  border: 0px;
-  text-shadow: 0 1px rgba(0,0,0,0.3);
-  background-color: #357ae8;
-  /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-}
-
-.loginmodal-container a {
-  text-decoration: none;
-  color: #666;
-  font-weight: 400;
-  text-align: center;
-  display: inline-block;
-  opacity: 0.6;
-  transition: opacity ease 0.5s;
-}
-
-.login-help{
-  font-size: 12px;
-}
 
 
 
@@ -324,6 +234,7 @@ section {
 	position: relative;
   margin: 0;
 
+
 }
 .base-sec:before {
 	content: ' ';
@@ -332,7 +243,7 @@ section {
 	height: 100%;
 	background: rgba(22,122,192,0.5);
 	top: 0;
-	left: 0
+	left: 0;
 }
 .base-sec h2 {
 	font-size: 55px;
@@ -348,4 +259,94 @@ section {
 }
 .base-sec p {
 	font-size: 16px;
+}
+/*-----------------------------end---------------------------------------*/
+
+
+/*------prectice----------------------------------------------------------*/
+.prectice{
+  background: #fff;
+  padding-bottom: 10px;
+  padding-top: 0px;
+  margin: 0;
+}
+
+.about{
+  margin-top:0px;
+  margin-bottom: 0px;
+  background-color: rgba(103,58,183,0.8);
+}
+.about h2{
+  color: #fff;
+}
+.about h4{
+  color: #fff;
+}
+/*--------------------------end--------------*/
+
+/*------------------------------ 登录页面 ----------------------------*/
+.user_setup{
+    height: 750px;
+    background: image_url("tea.jpg") no-repeat scroll top center/ cover;
+    margin-bottom: 0px;
+}
+
+@media (min-width: 768px) {
+   .user_setup_content {
+     border-radius: 0; //圆角
+   }
+ }
+.user_setup_content{
+    background: #fff;
+    margin-top: 135px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    box-shadow: 1px 2px 3px #111;
+    border: 1px solid #333;
+    border-radius: 25px;
+
+    opacity:0.95;
+    filter:alpha(opacity=95);
+
+    h2{
+      text-align: center;
+    }
+
+    .psw{
+      float: right;
+      margin-top: -33px;
+      position: relative;
+    }
+
+    .account{
+      text-align: center;
+    }
+
+    .form-inputs{
+      margin-top: 25px;
+    }
+
+    .form-actions{
+      text-align: center;
+      margin-top: 35px;
+      margin-bottom: 25px;
+
+      .button{
+        color: #fff;
+        background-color: #673AB7;
+        border-color: #673AB7;
+        font-size: 20px;
+        letter-spacing: 1px;
+        width: 100%;
+      }
+      .button:hover{
+          background-color: #9b59b6;
+          border-color: #9b59b6;
+          color: #fff;
+      }
+    }
+}
+/*-----------------end--------------------*/
+#admin-index{
+  margin-bottom: 245px;
 }
