--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -4,21 +4,16 @@
     	<div class="navbar-header">
       	<a class="navbar-brand" href="/">GOURMETS</a>
       </div>
-
-
-
-
-
       <div class="collapse navbar-collapse" >
         <ul class="nav navbar-nav navbar-right">
           <li>
               <% if !current_user %>
-                <li><a href="#" data-toggle="modal" data-target="#signup-modal">Sign up</a></li>
-                <li><a href="#" data-toggle="modal" data-target="#login-modal">Log in</a></li>
+							<li><%= link_to("Register", new_user_registration_path) %> </li>
+					    <li><%= link_to("Log in", new_user_session_path) %></l
               <% else %>
               <li class="dropdown">
                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                      Hello！, <%= current_user.email %>
+                      Hello！, <%= current_user.name %>
                    <b class="caret"></b>
                    </a>
                <ul class="dropdown-menu">
@@ -37,43 +32,3 @@
      </div>
 	</div>
  </header>
-
-
-<!-- 登录页面 -->
-<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog" role="document">
-    <div class="loginmodal-container">
-       <h2>账户登录</h2>
-       <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-         <div class="form-inputs">
-           <%= f.input :email, :label => "邮箱账号", required: false, autofocus: true %>
-           <%= f.input :password, :label => "账号密码", required: false %>
-           <%= f.input :remember_me, :label => "记住我", as: :boolean if devise_mapping.rememberable? %>
-         </div>
-         <div class="form-actions">
-           <%= f.button :submit, "立即登录" %>
-         </div>
-       <% end %>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
-  <div class="modal-dialog">
-    <div class="loginmodal-container">
-      <h2>注册账号</h2>
-        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= f.error_notification %>
-        <div class="form-inputs">
-          <%= f.input :email, :label => "邮箱账号", required: true, autofocus: true %>
-          <%= f.input :password, :label => "账号密码",required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-          <%= f.input :password_confirmation, :label => "密码确认", required: true %>
-        </div>
-        <div class="form-actions">
-            <%= f.button :submit, "立即注册" %>
-        </div>
-      <% end %>
-
-    </div>
-  </div>
-</div>
