--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,27 @@
-<h2>注册账号</h2>
+<div class="row user_setup">
+  <div class="col-md-4 col-md-offset-4 user_setup_content">
+    <div class="col-md-10 col-md-offset-1">
+  <h2>Sign up</h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, :label => "邮箱账号", required: true, autofocus: true %>
-    <%= f.input :password, :label => "密码", required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, :label => "确认密码", required: true %>
+    <%= f.input :email, :label => false, placeholder:'your email adress',required: true, autofocus: true %>
+    <%= f.input :name, :label => false, placeholder: 'your name', required: true %>
+    <%= f.input :is_admin, :label => false,  as: :radio_buttons, collection:  [['General User', false], ['Enterprise User', true]], required: true %>
+    <%= f.input :password, :label => false, placeholder: 'Enter the password for 6 to 12', required: true %>
+    <%= f.input :password_confirmation, :label => false, placeholder: 'confirm your password', required: true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "立即注册" %>
+    <%= f.button :submit, "Sign up", class: "button" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+<hr/>
+     <div  class = “account” >
+      <%= link_to "Log in", new_session_path(resource_name) %>
+     </div>
+   </div>
+ </div>
+</div>
