--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -28,9 +28,9 @@
                <div class="row">
                    <!-- Slide Text Layer -->
                    <div class="slide-text slide_style_left">
-                       <h1 data-animation="animated zoomInRight">Bootstrap Carousel</h1>
-                       <p data-animation="animated fadeInLeft">Bootstrap carousel now touch enable slide.</p>
-                       <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">select one</a>
+                       <h1 data-animation="animated zoomInRight">Gourmet</h1>
+                       <p data-animation="animated fadeInLeft">The good life start with food</p>
+                       <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">Enter</a>
                    </div>
                </div>
            </div>
@@ -45,9 +45,9 @@
            <div class="bs-slider-overlay"></div>
            <!-- Slide Text Layer -->
            <div class="slide-text slide_style_center">
-               <h1 data-animation="animated flipInX">不辜负美食</h1>
-               <p data-animation="animated lightSpeedIn">美食</p>
-               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">select one</a>
+               <h1 data-animation="animated flipInX">You Will Be</h1>
+               <p data-animation="animated lightSpeedIn">next gournet</p>
+               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">Enter</a>
 
            </div>
        </div>
@@ -61,9 +61,9 @@
            <div class="bs-slider-overlay"></div>
            <!-- Slide Text Layer -->
            <div class="slide-text slide_style_right">
-               <h1 data-animation="animated zoomInLeft">Beautiful Animations</h1>
-               <p data-animation="animated fadeInRight">Lots of css3 Animations to make slide beautiful .</p>
-               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">learn more</a>
+               <h1 data-animation="animated zoomInLeft">Join Us</h1>
+               <p data-animation="animated fadeInRight">Let the life rich and colorful</p>
+               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">Enter</a>
            </div>
        </div>
        <!-- End of Slide -->
@@ -89,102 +89,73 @@
 <!---首页动图演示结束-->
 
 
-
+<div class="row">
 <section class="about" id="about">
  <div class="container">
    <div class="row">
      <div class="col-xs-12">
-       <h2>About us</h2>
+       <h2>We want you </h2><br/></br>
       </div>
      </div>
    <div class="row">
      <div class="col-xs-12 col-sm-4">
-       <h4>Our history</h4>
-       <%= image_tag("feature.jpg") %><br/><br/>
-              <p class="index-contect">
-                联盟web2017创立，是一家新兴的互联网公司，专注于求职招聘领域。<br />
-              </p>
-              <p>在这个快速发展的时代，还在担心自己的才能无处施展吗？来联盟web就对了，在这里你可以找到自己心仪的合作伙伴，让我们进行一次美好的邂逅吧，联盟web等你！</p>
+       <h4>Our define</h4>
+       <%= image_tag("feature1.jpg") %><br/><br/>
+       <p>The term gourmet can refer to a person with refined or discriminating taste who is knowledgeable in the craft and art of food and food preparation.[1] Gourmand carries additional connotations of one who simply enjoys food in great quantities.</p>
+       <p class="visible-lg">An epicure is similar to a gourmet, but the word may sometimes carry overtones of excessive refinement. A gourmet chef is a chef of particularly high caliber of cooking talent and skill.</p>
      </div>
      <div class="col-xs-12 col-sm-4">
-       <h4>Our vision</h4>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+       <h4>Our pursuits</h4>
+        <%= image_tag("feature2.jpg") %><br/><br/>
+       <p>Certain events such as wine tastings cater to people who consider themselves gourmets and foodies. Television programs (such as those on the Food Network) and publications such as Gourmet magazine often serve gourmets with food columns and features. </p>
+       <p class="visible-lg"> Gourmet tourism is a niche industry catering to people who travel to food or wine tastings, restaurants, or food and wine production regions for leisure.</p>
+
      </div>
      <div class="col-xs-12 col-sm-4">
        <h4>Our values</h4>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
-       <p class="visible-lg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos laborum est, beatae rem soluta autem odio placeat, ad, libero aliquam, aut excepturi obcaecati. Sit voluptatum qui quidem, nulla architecto ab.</p>
+        <%= image_tag("feature3.jpg") %><br/><br/>
+       <p>Food can bring happiness to the person, food is essential in our life, therefore, we choose good gourmet for people, they are proficient in different areas of food, to make or to enjoy healthy and delicious food, the easy to eat food, it is a very exciting thing, because there is such a group of people they serve.</p>
+       <p class="visible-lg">They don't need to own to choose food.Our value lies in to enjoy food and people like to eat all kinds of food service, because the people like food in general is deeply loves the life of the people, we are proud because their service.</p>
+
      </div>
    </div>
  </div>
 </section> <!-- end of about section-->
-<hr>
+</div>
 
 <!-- 中间四个图片演示 -->
-<hr>
+
+<div class="row">
 <section class="prectice" id="prectice">
   <div class="container">
     <div class="row">
-      <h2 class="text-left">We need you to grasp one of the following four</h2>
+      <br/></br>
+      <h2 class="text-center">We need you to grasp one of the following four</h2>
       <section id="pinBoot">
         <article class="white-panel"><img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulqkey26j31hc0zwduk.jpg" alt="">
-          <h4><a href="#">cookie</a></h4>
+          <h4>cookie</h4>
         </article>
 
         <article class="white-panel"> <img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulri3bd3j30hs0cnwf9.jpg" alt="">
-          <h4><a href="#">wine</a></h4>
+          <h4>wine</h4>
         </article>
 
         <article class="white-panel"> <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1feultqyqzij31hc0zlamn.jpg" alt="">
-          <h4><a href="#">tea art</a></h4>
+          <h4>tea art</h4>
         </article>
 
 
         <article class="white-panel"> <img src="http://ww2.sinaimg.cn/large/006tNbRwgy1feultizmybj31hc0zkn9w.jpg" alt="">
-          <h4><a href="#">beafstack</a></h4>
+          <h4>beafstack</h4>
         </article>
       </section>
       <hr>
     </div>
   </div>
 </section>
+<div>
 <!-- 中间四个图片演示结束-->
 
-<hr>
-<section class="testimonials" id="testimonials">
-  <div class="container">
-    <div class="row">
-     <div class="col-xs-12">
-       <h2>Our Testimonials</h2>
-     </div>
-    </div>
-    <div class="row">
-     <div class="col-xs-12 col-sm-4">
-       <blockquote>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
-         </p>
-      </blockquote>
-     </div>
-     <div class="col-xs-12 col-sm-4">
-       <blockquote>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
-         </p>
-       </blockquote>
-     </div>
-     <div class="col-xs-12 col-sm-4">
-       <blockquote>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore eligendi a officiis aspernatur nesciunt ducimus, placeat. Eum, ratione maxime fugiat deserunt doloremque laborum hic quisquam in, libero voluptatibus! Assumenda, eligendi.
-         </p>
-       </blockquote>
-     </div>
-    </div>
-  </div>
-</section><!-- end of testimonials section-->
 
 <!-- About
     ================================================== -->
