--- a/app/views/jobs/search.html.erb
+++ b/app/views/jobs/search.html.erb
@@ -2,8 +2,8 @@
   <div class="col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
     <br>
     <div class="pull-right">
-      <%= link_to(content_tag(:i, " 查看所有职位"), jobs_path) %> |
-      <%= link_to(content_tag(:i, " 返回", class: "fa fa-arrow-left"), url_for(:back)) %>
+      <%= link_to(content_tag(:i, " Check All"), jobs_path) %> |
+      <%= link_to(content_tag(:i, " Back", class: "fa fa-arrow-left"), url_for(:back)) %>
     </div>
 
     <% if @jobs.blank?%>
