--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -5,6 +5,13 @@
       	<a class="navbar-brand" href="/">GOURMETS</a>
       </div>
       <div class="collapse navbar-collapse" >
+				<ul class="nav navbar-nav">
+					<li>
+						<div class="form-group form-inline search-bar">
+							 <%= render :partial => "jobs/search_bar"%>
+						</div>
+					</li>
+				</ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
               <% if !current_user %>
