--- a/app/views/jobs/_jobs_item.html.erb
+++ b/app/views/jobs/_jobs_item.html.erb
@@ -3,12 +3,12 @@
     <div class="pull-right">
       <% if user_signed_in? && !current_user.admin? %>
         <% if current_user && current_user.has_applied?(job) %>
-          <%= link_to("已投递", new_job_resume_path(job), class: "btn btn-info btn-sm disabled", method: :get) %>
+          <%= link_to("Delivered", new_job_resume_path(job), class: "btn btn-info btn-sm disabled", method: :get) %>
         <% else %>
-          <%= link_to("投简历", new_job_resume_path(job), class: "btn btn-info btn-sm", method: :get) %>
+          <%= link_to("Deliver", new_job_resume_path(job), class: "btn btn-info btn-sm", method: :get) %>
         <% end%>
       <% else %>
-        <%= link_to("投简历", new_job_resume_path(job), class: "btn btn-info btn-sm", method: :get) %>
+        <%= link_to("Deliver", new_job_resume_path(job), class: "btn btn-info btn-sm", method: :get) %>
       <% end %>
     </div>
     <p><%= link_to(job.title, job_path(job)) %></p>
@@ -16,7 +16,7 @@
 
     <div class="row">
       <div class="col-md-6">
-        <p>薪资范围: <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %> </p>
+        <p>Salary: <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %> </p>
       </div>
       <div class="col-md-6">
         <p><i class="fa fa-address-card-o" aria-hidden="true"></i>  <%= job.category %></p>
