--- a/app/views/jobs/_search_bar.html.erb
+++ b/app/views/jobs/_search_bar.html.erb
@@ -2,7 +2,7 @@
   <div class="col-sm-9 col-lg-8 col-lg-offset-2">
     <%= form_tag search_jobs_path , :method => :get, :class => "jobs-search-form" do %>
       <div class="input-group">
-        <input type="text" class="form-control search-bar-input" name="q" value="<%= params[:q] %>" placeholder="职位名称, 公司, 城市...">
+        <input type="text" class="form-control search-bar-input" name="q" value="<%= params[:q] %>" placeholder="Search...">
 
         <span class="input-group-btn">
           <button type="submit" class="btn btn-default search-bar-submit">
