--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-
+        <div class="content">
         <div class="container-fluid">
           <div class="row">
             <%= render "common/navbar" %>
@@ -30,6 +30,7 @@
         <div class="row">
          <%= render "common/footer" %>
        </div>
+     </div>
 
     </body>
 </html>
