--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,17 +9,18 @@
   </head>
 
   <body>
+    <div class="content">
       <div class="container-fluid">
          <div class="row">
            <%= render "common/navbar" %>
-         </div>
-         <%= render "common/flashes" %>
          <%= yield %>
+         </div>
       </div>
+    </div>
 
-
+       <div class="row">
           <%= render "common/footer" %>
-
+       </div>
 
   </body>
 </html>
