--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -132,22 +132,22 @@
       <br/></br>
       <h2 class="text-center">We need you to grasp one of the following four</h2>
       <section id="pinBoot">
-        <article class="white-panel"><img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulqkey26j31hc0zwduk.jpg" alt="">
+        <div class="white-panel "><img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulqkey26j31hc0zwduk.jpg" alt="">
           <h4>cookie</h4>
-        </article>
+        </div>
 
-        <article class="white-panel"> <img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulri3bd3j30hs0cnwf9.jpg" alt="">
+        <div class="white-panel"> <img src="http://ww1.sinaimg.cn/large/006tNbRwgy1feulri3bd3j30hs0cnwf9.jpg" alt="">
           <h4>wine</h4>
-        </article>
+        </div>
 
-        <article class="white-panel"> <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1feultqyqzij31hc0zlamn.jpg" alt="">
+        <div class="white-panel "> <img src="http://ww3.sinaimg.cn/large/006tNbRwgy1feultqyqzij31hc0zlamn.jpg" alt="">
           <h4>tea art</h4>
-        </article>
+        </div>
 
 
-        <article class="white-panel"> <img src="http://ww2.sinaimg.cn/large/006tNbRwgy1feultizmybj31hc0zkn9w.jpg" alt="">
+        <div class="white-panel "> <img src="http://ww2.sinaimg.cn/large/006tNbRwgy1feultizmybj31hc0zkn9w.jpg" alt="">
           <h4>beafstack</h4>
-        </article>
+        </div>
       </section>
       <hr>
     </div>
@@ -179,3 +179,17 @@
     </div>
   </div>
 </section>
+
+<script type="text/javascript">
+
+$(document).ready(function() {
+$('#pinBoot').pinterest_grid({
+no_columns: 4,
+padding_x: 10,
+padding_y: 10,
+margin_bottom: 50,
+single_column_breakpoint: 700
+});
+});
+
+</script>
