--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 
   <div class="form-inputs">
     <%= f.input :is_admin, :label => false,  as: :radio_buttons, collection:  [['General User', false], ['Enterprise User', true]], required: true %>
-    <%= f.input :email, :label => false, placeholder:'your email adress',required: true, autofocus: true %>
+    <%= f.input :email, :label => false, placeholder:'your email address',required: true, autofocus: true %>
     <%= f.input :name, :label => false, placeholder: 'your name', required: true %>
 
     <%= f.input :password, :label => false, placeholder: 'Enter the password for 6 to 12', required: true %>
@@ -22,7 +22,7 @@
 <hr/>
      <div class = “account”>
       <%= link_to "Log in", new_session_path(resource_name) %>
-     </div> 
+     </div>
    </div>
  </div>
 </div>
