add footer icon

--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,5 @@
-
-  <footer class="footer">
+ <footer class="footer">
     <p class="text-center">Copyright ©2017 job-listing-game
-     <br>Design by jonathan
+     <br><i>♥</i> Design by jonathan
     </p>
   </footer>
