--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -182,11 +182,16 @@ stylize any heading tags withing white-panel below
   background-color:#673AB7;
   color: #bdc3c7;
   padding: 20px;
-
-
   z-index: 1000;
 }
 
+i {
+  font-style: normal;
+  color: #F50057;
+  font-size: 14px;
+  position: relative;
+  top: 2px;
+}
 
 
 
