--- a/app/views/jobs/_search_bar.html.erb
+++ b/app/views/jobs/_search_bar.html.erb
@@ -1,14 +1,19 @@
 <div class="row">
   <div class="col-sm-9 col-lg-8 col-lg-offset-2">
     <%= form_tag search_jobs_path , :method => :get, :class => "jobs-search-form" do %>
-      <div class="input-group">
-        <input type="text" class="form-control search-bar-input" name="q" value="<%= params[:q] %>" placeholder="Search...">
-
+      <!-- <div class="input-group">
+        <input type="text" class="form-control search-bar-input"
+         name="q" value="<%= params[:q] %>"   placeholder="Search...">
         <span class="input-group-btn">
           <button type="submit" class="btn btn-default search-bar-submit">
             <span class="glyphicon glyphicon-search"></span>
           </button>
         </span>
+      </div> -->
+      <div class="cntr-innr">
+       <label class="search" for="inpt_search">
+        <input id="inpt_search" type="text" name="q" value="<%= params[:q] %>"/>
+       </label>
       </div>
     <% end %>
   </div>
