--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,6 +64,7 @@ html {
 body { min-height: 100%;
   display: flex;
   flex-direction: column;
+
  }
 
 .content {
@@ -191,28 +192,6 @@ i {
   font-size: 14px;
   position: relative;
   top: 2px;
-}
-
-
-
-
-
-
-/*------------------------  搜索框样式 --------------------*/
-.form-group {
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-.input-group {
-    position: relative;
-    display: table;
-    border-collapse: separate;
-
-    width: 150px; //加上width
-}
-.btn.btn-default{
-  background: #fff;
 }
 
 /*----------------------------end ------------------------*/
@@ -376,15 +355,27 @@ section {
   background: #fff;
 }
 
+
+.cntr{
+  display:table;
+  width:100%;
+  height:100%;
+  .cntr-innr{
+    display:table-cell;
+    text-align:center;
+    vertical-align:middle
+  }
+}
+/*** STYLES ***/
 .search {
 	display: inline-block;
 	position: relative;
-	height: 35px;
-	width: 35px;
+	height: 25px;
+	width: 30px;
 	box-sizing: border-box;
-	margin: 0px 8px 7px 0px;
+	margin: 13px 8px 7px 0px;
 	padding: 7px 9px 0px 9px;
-	border: 3px solid @icn-color;
+	border: 3px solid #ffffff;
 	border-radius: 25px;
 	transition: all 200ms ease;
 	cursor: text;
@@ -393,19 +384,20 @@ section {
 		content: "";
 		position: absolute;
 		width: 3px;
-		height: 20px;
-		right: -5px;
-		top: 21px;
-		background: @icn-color;
+		height: 10px;
+		right: -2px;
+		top: 18px;
+		background: #ffffff;
 		border-radius: 3px;
 		transform: rotate(-45deg);
-		transition: all 200ms ease;
+		transition: all 100ms ease;
 	}
 
 	&.active,
 	&:hover {
 		width: 200px;
-		margin-right: 0px;
+		margin-right: -10px;
+
 
 		&:after {
 			height: 0px;
@@ -417,8 +409,8 @@ section {
 		border: none;
 		box-sizing: border-box;
 		font-family: Helvetica;
-		font-size: 15px;
-		color: inherit;
+		font-size: 10px;
+		color: #ffffff;
 		background: transparent;
 		outline-width: 0px;
 	}
