--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@
 .navbar-brand{
    color: #ffffff;
    font-weight: 700px;
+   
 }
 
 .navbar button{
@@ -355,63 +356,26 @@ section {
   background: #fff;
 }
 
+/*-----------搜索框-----------------------*/
+.form-group {
+    margin-bottom: 10px;
+    margin-top: 10px;
 
-.cntr{
-  display:table;
-  width:100%;
-  height:100%;
-  .cntr-innr{
-    display:table-cell;
-    text-align:center;
-    vertical-align:middle
-  }
 }
-/*** STYLES ***/
-.search {
-	display: inline-block;
-	position: relative;
-	height: 25px;
-	width: 30px;
-	box-sizing: border-box;
-	margin: 13px 8px 7px 0px;
-	padding: 7px 9px 0px 9px;
-	border: 3px solid #ffffff;
-	border-radius: 25px;
-	transition: all 200ms ease;
-	cursor: text;
+.input-group {
+    position: relative;
+    display: table-cell;
+    border-collapse: separate;
+    width: 200px; //加上width
 
-	&:after {
-		content: "";
-		position: absolute;
-		width: 3px;
-		height: 10px;
-		right: -2px;
-		top: 18px;
-		background: #ffffff;
-		border-radius: 3px;
-		transform: rotate(-45deg);
-		transition: all 100ms ease;
-	}
-
-	&.active,
-	&:hover {
-		width: 200px;
-		margin-right: -10px;
-
-
-		&:after {
-			height: 0px;
-		}
-	}
-
-	input {
-		width: 100%;
-		border: none;
-		box-sizing: border-box;
-		font-family: Helvetica;
-		font-size: 10px;
-		color: #ffffff;
-		background: transparent;
-		outline-width: 0px;
-	}
 }
+
+.btn.btn-default.search-bar-submit{
+  background: #ffffff;
+
+.glyphicon.glyphicon-search{
+  background: #ffffff;
+  color: #673AB7;
+}
+}
+/*----------------end-----------------*/
