--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,4 @@
-<div class="dropdown clearfix pull-right">
+<!-- <div class="dropdown clearfix pull-right">
     <button class="btn btn-xs btn-info dropdown-toggle" type="button" id="dropdownMenuDivider" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
       排序
         <span class="caret"></span>
@@ -71,4 +71,102 @@
 
 <div class="text-center">
   <%= will_paginate @jobs %>
+</div> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+
+
+</head>
+
+<body>
+
+ <div class="center hero-unit" style="background: url('https://ww1.sinaimg.cn/large/006tNc79gy1fbwwmvrf6qj318g0hcmyg.jpg');background-repeat:no-repeat;">
+   <div class="container index-words">
+
+    <h1>Welcome to the Victor Hunting</h1>
+
+    <h2>
+      This is a dreaming stage.You will get all of what you want!
+     <!-- 这是一个为企业和个人展现自我的舞台！我们能为您付出更多来建造！ -->
+    </h2>
+    <br><br>
+
+    <% if !current_user %>
+     <%= link_to "Join us now!", new_user_registration_path, class: "myButton" %>
+    <% end %>
+ </div>
+ </div>
+
+<!-- 职位有关内容 -->
+<br>
+
+<br>
+
+<div class="container-fluid">
+  <div class="col-md-12 col-md-offset-1 col-lg-8 col-lg-offset-2">
+    <div class="col-md-12">
+      <ul class="nav nav-tabs" role="tablist" id="myTab">
+        <li role="presentation" class="active"><a href="<% link_to(jobs_path) %>" role="tab" data-toggle="tab">Home</a></li>
+         <li role="presentation" class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                筛选 <span class="caret"></span>
+              </a>
+           <ul class="dropdown-menu">
+             <li role="presentation"><%= link_to("更新时间排序", jobs_path(:order => "created_at")) %></li>
+             <li role="presentation"><%= link_to("薪资上限排序", jobs_path(:order => "by_upper_bound")) %></li>
+             <li role="presentation"><%= link_to("薪资下限排序", jobs_path(:order => "by_lower_bound")) %></li>
+           </ul>
+         </li>
+      </ul>
+    <% @jobs.each do |job| %>
+     <div class="row">
+     <div class="col-md-12 col-md-offset-10">
+      <% if current_user && current_user.is_favorite_of?(job) %>
+        <button type="button" class="btn btn-default btn-xs"><%= link_to('<span class="glyphicon glyphicon-star-empty"></span>取消收藏'.html_safe, favorite_job_path(job, type: "unfavorite"), method: :put) %></button>
+      <% else %>
+        <button type="button" class="btn btn-default btn-xs"><%= link_to('<span class="glyphicon glyphicon-star"></span>添加收藏'.html_safe, favorite_job_path(job, type: "favorite"), method: :put) %></button>
+      <% end %>
+    </div>
+  </div>
+
+
+       <div class="row">
+        <div class="col-md-6">
+          <span style="font-size:1.3em"><i class="fa fa-paw" aria-hidden="true"></i> <%= link_to(job.title, job_path(job)) %></span>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top:10px;">
+        <div class="col-md-3">
+          <span style="font-size:1em;"><i class="fa fa-handshake-o"></i> 企业名称：<%= job.company %></span>
+        </div>
+        <div class="col-md-3">
+          <span class="badge badge-info">
+            薪资： <span style="font-size:1em;"class="fa fa-rmb"></span><%= job.wage_lower_bound %> - <%= job.wage_upper_bound %> </span>
+       </div>
+       <div class="col-md-3">
+         <span style="font-size:1em;"><i class="fa fa-envelope-open-o"></i> 邮箱地址：<%= job.contact_email %></span>
+       </div>
+      </div>
+
+      <div class="row" style="margin-top:5px;">
+        <div class="col-md-3">
+          <span style="font-size:1em;"><i class="fa fa-paper-plane-o" aria-hidden="true" style="color: black;"></i> 城市：<%= job.city %></span>
+        </div>
+        <div class="col-md-3">
+          <span style="font-size:1em;"><i class="fa fa-clock-o" aria-hidden="true"></i> 发布于：<%= time_ago_in_words(job.created_at) %>前</span>
+        </div>
+      </div>
+      <hr>
+    <% end %>
+    </div>
+  </div>
 </div>
+<div class="text-center">
+  <%= will_paginate @jobs,renderer: BootstrapPagination::Rails %>
+</div>
+
+</body>
+</html>
