--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -5,6 +5,9 @@
 <%= f.input :wage_lower_bound, :label => "薪资下限"%>
 <%= f.input :wage_upper_bound, :label => "薪资上限"%>
 <%= f.input :contact_email, :label => "联系邮箱"%>
+<%= f.input :company, :label => "公司"%>
+<%= f.input :city, :label => "城市" %>
+<%= f.input :category, :label => "类型" %>
 <%= f.input :is_hidden, :label => "隐藏职位"%>
 <%= f.submit "提交" %>
 <% end %>
