--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,15 +1,44 @@
-<h1> <%= @job.title %> </h1>
+<!-- <div class="col-md-12">
 
-<p>
-  <%= simple_format(@job.description) %>
+  <h1>
+    <%= @job.title %>
+  </h1>
 
-</p>
-<div class="text-center">
-  <% if current_user && current_user.has_applied?(@job) %>
-    <%= link_to("您已投递，不可重复投递", new_job_resume_path(@job), class: "btn btn-danger btn-sm
-                 disabled", method: :get) %>
-<% else %>
-    <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-info btn-sm",
-                 method: :get) %>
- <% end %>
+  <p>
+    <%= simple_format(@job.description) %>
+
+  </p>
+  <div class="text-center">
+    <% if current_user && current_user.has_applied?(@job) %>
+     <%= link_to("您已投递，不可重复投递", new_job_resume_path(@job), class: "btn btn-danger btn-sm-disabled", method: :get) %>
+    <% else %>
+    <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-info btn-sm",method: :get) %>
+    <% end %>
+
+    <% if current_user && current_user.is_favorite_of?(@job) %>
+    <%= link_to('取消收藏'.html_safe, favorite_job_path(@job, type: "unfavorite"), method: :put) %>
+     <% else %>
+    <%= link_to('添加收藏'.html_safe, favorite_job_path(@job, type: "favorite"), method: :put) %>
+    <% end %>
+  </div>
+
+</div> -->
+
+<div class="col-md-12 job-content">
+  <h1> <%= @job.title %></h1>
+  <p>
+    <%= simple_format(@job.description) %>
+
+  </p>
+  <br><br>
+  <hr>
+
+  <div class="text-center">
+    <% if current_user && current_user.is_favorite_of?(@job) %>
+    <%= link_to('取消收藏'.html_safe, favorite_job_path(@job, type: "unfavorite"), method: :put) %>
+     <% else %>
+    <%= link_to('添加收藏'.html_safe, favorite_job_path(@job, type: "favorite"), method: :put) %>
+    <% end %>
+    <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-lg btn-primary") %>
+  </div>
 </div>
