--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,9 +1,29 @@
-<h3> 投交履历到 <%= @job.title %> </h3>
+<!-- <div class="col-md-12 ">
+  <h3>
+    投交履历到
+    <%= @job.title %>
+  </h3>
 
-<hr>
+  <hr>
 
-<%= simple_form_for [@job, @resume] do |f| %>
+  <%= simple_form_for [@job, @resume] do |f| %>
   <%= f.input :content %>
   <%= f.input :attachment, :label => "附件"%>
-  <%= f.submit "送出" %>
-<% end %>
+  <%= f.submit "送出", class:"btn-info" %>
+  <% end %>
+</div> -->
+<div class="col-md-12 job-content">
+  <h3> Send Resume</h3>
+  <hr>
+  <div class="col-md-4 col-md-offset-4">
+    <%= simple_form_for [@job,@resume] do |f| %>
+      <div class="form-group">
+        <%= f.input :content, input_html: { class: "form-control"} %>
+        <%= f.input :attachment%>
+      </div>
+      <div class="form-actions text-center">
+        <%= f.submit "Submit", disable_with: "Submiting...", class: "btn btn-primary"%>
+      </div>
+    <% end %>
+  </div>
+</div>
