--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -30,7 +30,7 @@
                    <div class="slide-text slide_style_left">
                        <h1 data-animation="animated zoomInRight">Gourmet</h1>
                        <p data-animation="animated fadeInLeft">The good life start with food</p>
-                       <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">Enter</a>
+                        <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">Enter</a></p>
                    </div>
                </div>
            </div>
@@ -47,8 +47,8 @@
            <div class="slide-text slide_style_center">
                <h1 data-animation="animated flipInX">You Will Be</h1>
                <p data-animation="animated lightSpeedIn">next gournet</p>
-               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">Enter</a>
-
+               <!-- <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInUp">Enter</a> -->
+                 <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">Enter</a></p>
            </div>
        </div>
        <!-- End of Slide -->
@@ -63,7 +63,8 @@
            <div class="slide-text slide_style_right">
                <h1 data-animation="animated zoomInLeft">Join Us</h1>
                <p data-animation="animated fadeInRight">Let the life rich and colorful</p>
-               <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">Enter</a>
+               <!-- <a href="/jobs" target="_blank" class="btn btn-default" data-animation="animated fadeInLeft">Enter</a> -->
+                <p class="lead"><a class="btn btn-lg btn-danger" href="/jobs">Enter</a></p>
            </div>
        </div>
        <!-- End of Slide -->
