--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -1,13 +1,29 @@
-<%= simple_form_for [:admin,@job] do |f| %>
+<div class="col-md-8">
+  <%= simple_form_for [:admin,@job] do |f| %>
+  <div class="form-group">
+    <%= f.input :title, placeholder: 'job title'%>
+    <%= f.input :description %>
+    <%= f.input :wage_lower_bound, :label => 'wage_bound' do %>
+    <%= f.input_field :wage_lower_bound, :as => :string %>
+    K ~
+    <%= f.input_field :wage_upper_bound, :as => :string %>
+    K
+    <% end %>
 
-<%= f.input :title, :label => "职位名称" %>
-<%= f.input :description, :label => "职位描述" %>
-<%= f.input :wage_lower_bound, :label => "薪资下限"%>
-<%= f.input :wage_upper_bound, :label => "薪资上限"%>
-<%= f.input :contact_email, :label => "联系邮箱"%>
-<%= f.input :company, :label => "公司"%>
-<%= f.input :city, :label => "城市" %>
-<%= f.input :category, :label => "类型" %>
-<%= f.input :is_hidden, :label => "隐藏职位"%>
-<%= f.submit "提交", :class => "btn btn-xs btn-info"%>
-<% end %>
+    <%= f.input :company %>
+    <% if @job.city? %>
+    <%= f.input :city, :collection => ["Beijing", "Shanghai", "Shenzhen", "Guangzhou"] , :checked => @job.city %>
+    <% else %>
+    <%= f.input :city, :collection => ["Beijing", "Shanghai", "Shenzhen", "Guangzhou"] %>
+    <% end %>
+    <% if @job.category? %>
+    <%= f.input :category, :collection => ["steak", "wine taster", "pastry cook", "tea art"], :checked => @job.category %>
+    <% else %>
+    <%= f.input :category, :collection => ["steak", "wine taster", "pastry cook", "tea art"] %>
+    <% end %>
+    <%= f.input :contact_email %>
+    <%= f.input :is_hidden %>
+  </div>
+  <%= f.submit "submit", disable_with:"submiting",:class => "btn btn-xs btn-info"%>
+  <% end %>
+</div>
