--- a/app/views/jobs/_jobs_item.html.erb
+++ b/app/views/jobs/_jobs_item.html.erb
@@ -11,31 +11,39 @@
         <%= link_to("Deliver", new_job_resume_path(job), class: "btn btn-info btn-sm", method: :get) %>
       <% end %>
     </div>
-    <p><%= link_to(job.title, job_path(job)) %></p>
 
 
-    <div class="row">
-      <div class="col-md-6">
-        <p>Salary: <%= job.wage_lower_bound %> ~ <%= job.wage_upper_bound %> </p>
-      </div>
-      <div class="col-md-6">
-        <p><i class="fa fa-address-card-o" aria-hidden="true"></i>  <%= job.category %></p>
-      </div>
-    </div>
 
     <div class="row">
-      <div class="col-md-3 col-sm-6">
-        <span><i class="fa fa-user-circle-o" aria-hidden="true"></i>  <%= job.company %></span>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <span><i class="fa fa-location-arrow" aria-hidden="true"></i>  <%= job.city %></span>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <span><i class="fa fa-clock-o" aria-hidden="true"></i>  <%= time_ago_in_words(job.created_at) %> ago</span>
-      </div>
-      <div class="col-md-3 col-sm-6">
-        <span><i class="fa fa-envelope" aria-hidden="true"></i>  <%= job.contact_email %></span>
-      </div>
+     <div class="col-md-6">
+       <span style="font-size:1.3em"></i> <%= link_to(job.title, job_path(job)) %></span>
+     </div>
+   </div>
+
+   <div class="row" style="margin-top:10px;">
+     <div class="col-md-3">
+       <span style="font-size:1em;"><i class="fa fa-handshake-o"></i> company：<%= job.company %></span>
+     </div>
+
+     <div class="col-md-3">
+       <span class="badge badge-info">
+         salary： <span style="font-size:1em; background-color: #ffffff;"class="fa fa-rmb"></span><%= job.wage_lower_bound %> - <%= job.wage_upper_bound %> RMB
+       </span>
     </div>
+    <div class="col-md-3">
+      <span style="font-size:1em;"><i class="fa fa-envelope-open-o"></i> contact_email：<%= job.contact_email %></span>
+    </div>
+   </div>
+
+   <div class="row" style="margin-top:5px;">
+     <div class="col-md-3">
+       <span style="font-size:1em;"><i class="fa fa-location-arrow" aria-hidden="true" style="color: black;"></i> city：<%= job.city %></span>
+     </div>
+     <div class="col-md-3">
+       <span style="font-size:1em;"><i class="fa fa-clock-o" aria-hidden="true"></i><%= time_ago_in_words(job.created_at) %> ago</span>
+     </div>
+   </div>
+   <hr>
+   <!--分页区块 -->
   </div>
 </div>
