--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,3 +1,8 @@
-<h1>新增职位</h1>
-
-<%= render "form" %>
+<div class="col-md-8">
+<div class="panel panel-default">
+  <div class="panel-heading">新增职位</div>
+  <div class="panel-body">
+  <%= render "form" %>
+  </div>
+</div>
+</div>
