--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -7,7 +7,7 @@
 
 <body>
 
- <div class="center hero-unit" style="background: url('https://ww1.sinaimg.cn/large/006tNc79gy1fbwwmvrf6qj318g0hcmyg.jpg');background-repeat:no-repeat;">
+ <div class="center hero-unit" style="background: url('http://ww3.sinaimg.cn/large/006tNbRwgy1fev6acoih7j31hc0xqwu3.jpg');background-repeat:no-repeat;">
    <div class="container index-words">
 
     <h2 class="text-center">Welcome to the Gournet</h2>
@@ -21,7 +21,7 @@
  <div class="container-fluid">
   <div class="col-md-12 col-md-offset-1 col-lg-8 col-lg-offset-2">
     <div class="col-md-12">
-      <ul class="nav nav-tabs" role="tablist" id="myTab">
+      <ul class="nav nav-tabs nav1" role="tablist" id="myTab">
         <li role="presentation" class="active"><a href="<% link_to(jobs_path) %>" role="tab" data-toggle="tab">Home</a></li>
          <li role="presentation" class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
