better job#index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 
 .nav > li > a:hover, .nav > li > a:focus{
   background-color:#9b59b6; /* 点击文字时的底色*/
-  outline:none;
+  //outline:none;
 }
 .dropdown-menu{
     border-radius: 0;
@@ -35,11 +35,15 @@
     margin-bottom: 0;
     min-height: 70px;
     background-color: #9b59b6;
+
 }
 
+.dropdown-menu > li > a{
+  color: #bdc3c7;
+}
 
-.dropdown-toggle{
-  color: #9b59b6;
+.dropdown-menu .open > li:hover, .dropdown-menu .open > li:focus{
+  background-color: #9b59b6;
 }
 
 .dropdown > li > a:hover{
@@ -47,16 +51,30 @@
 
 }
 
+.dropdown > li > a:focus{
+  background: #ffffff;
+}
 
 .nav > li > a{
  color: #fff ;
 
 }
 
-.nav1 > li > a{
-  color:  #eee;
-  background: #ffffff;
+.nav .open > a:hover, .nav .open >a:focus{
+  background: #9b59b6;
+  color: #ffffff;
+  border-color: #ffffff;
 
+}
+
+.nav1 > li > a{
+  color:   #ffffff;
+  background: #673AB7;
+
+}
+
+.nav-tabs > li > a:hover{
+  border-color: #673AB7;
 }
 
 .navbar{
@@ -425,4 +443,22 @@ section {
   padding-bottom: 100px;
   color:#F4511E;
 
+}
+
+/*--------------工作展示页面------------*/
+.welome-job > h2{
+  color: #673AB7;
+}
+
+.btn.btn-info{
+  background: rgba(155, 89, 182, 10);
+  border-color: #ffffff;
+}
+
+.btn.btn-info:hover{
+  background:  #9b59b6;
+}
+
+.badge.badge-info{
+  background: #9b59b6;
 }
