--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -21,12 +21,12 @@
               <% else %>
               <li class="dropdown">
                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                      Hello！, <%= current_user.name %>
+                      Hello！ <%= current_user.name %>
                    <b class="caret"></b>
                    </a>
                <ul class="dropdown-menu aria-labelledby="dropdownMenuDivider"">
                  <% if current_user.admin? %>
-                 <li> <%= link_to("admin", admin_jobs_path)%></li>
+                 <li> <%= link_to("Admin", admin_jobs_path)%></li>
 								  <li role="separator" class="divider"></li>
                  <% end %>
                  <li> <%= link_to("My jobs", account_jobs_path)%></li>
